cluster_config_backup/2023_12_02/per_resource_api/virtualservices.networking.istio.io.default.reviews.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"reviews","namespace":"default"},"spec":{"hosts":["reviews"],"http":[{"match":[{"sourceLabels":{"topology.istio.io/network":"network1"}}],"name":"west-local","route":[{"destination":{"host":"reviews","subset":"west"}}]},{"match":[{"sourceLabels":{"topology.istio.io/network":"network2"}}],"name":"east-local","route":[{"destination":{"host":"reviews","subset":"east"}}]}]}}
  creationTimestamp: "2023-11-17T18:53:38Z"
  generation: 1
  name: reviews
  namespace: default
  resourceVersion: "156327"
  uid: 3734a58f-ee59-410c-a9d1-b1ebcd875d8b
spec:
  hosts:
  - reviews
  http:
  - match:
    - sourceLabels:
        topology.istio.io/network: network1
    name: west-local
    route:
    - destination:
        host: reviews
        subset: west
  - match:
    - sourceLabels:
        topology.istio.io/network: network2
    name: east-local
    route:
    - destination:
        host: reviews
        subset: east
